# advent-of-code

./: .gitignore
2015/: Cargo.toml
2015/src/: day_01.rs  day_02.rs  day_03.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
2016/: Cargo.toml
2016/input/2016/: day11.txt
2016/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  lib.rs  main.rs
2017/: Cargo.toml
2017/src/: lib.rs
2018/: Cargo.toml
2018/src/: lib.rs
2019/: Cargo.toml
2019/day-01/: Cargo.toml
2019/day-02/: Cargo.toml
2019/day-03/: Cargo.toml
2019/day-04/: Cargo.toml
2019/day-05/: Cargo.toml
2019/day-06/: Cargo.toml
2019/src/: intcode.rs  lib.rs
2020/: Cargo.toml
2020/day-01/: Cargo.toml
2020/day-01/src/: main.rs
2020/day-02/: Cargo.toml
2020/day-02/src/: main.rs
2020/input/2020/: day23.txt
2020/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs  main.rs
2021/: Cargo.toml
2021/src/: lib.rs
2022/: Cargo.toml
2022/src/: lib.rs
2023/: Cargo.toml
2023/src/: lib.rs
2024/: Cargo.toml
2024/src/: lib.rs
2025/: Cargo.toml
2025/src/: lib.rs
(+25 files in other folders)
