[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Scotow <contact@scotow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
aoc = { git = "https://github.com/irevoire/aoc", version = "0.1.1" }
itertools = "0.9.0"
